# Monitor-Control

./: .gitignore  README.md  environment.yml  pyproject.toml
monitor_control/: cli.py
monitor_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
monitor_control/config/: defaults.yaml  settings.py
monitor_control/core/: __init__.py  ddcutil.py  errors.py  models.py
monitor_control/services/: __init__.py  brightness.py  discovery.py  power.py
monitor_control/utils/: logging.py
tests/: test_parse_detect.py
